# common_helper_unpacking_classifier

./: .gitignore  .travis.yml  README.md  pyproject.toml  setup.py
.github/workflows/: run_pytest.yml
src/common_helper_unpacking_classifier/: __init__.py  average_entropy.py  chi_square_test.py  g_test.py  get_size.py  helper.py  shannon_entropy.py  uncompress_classifier.py  utils.py
src/tests/: test_average_entropy.py  test_get_size.py  test_is_compressed.py
