[build-system]
requires = [
    "setuptools>=59.6.0",
    "wheel>=0.37.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "common_helper_unpacking_classifier"
version = "0.5.0"
description = "Functions that help judge whether unpacking was successful."
authors = [
    { name = "Fraunhofer FKIE", email = "peter.weidenbach@fkie.fraunhofer.de" }
]
license = {file = "LICENSE"}
dependencies = [
    "entropython~=1.1.0",
    "common_helper_files @ git+https://github.com/fkie-cad/common_helper_files.git@0.3.0#egg=common_helper_files"
]
urls = { "Homepage" = "https://www.fkie.fraunhofer.de" }

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["common_helper_unpacking_classifier"]
exclude = ["tests"]
